--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^3.1.0",
     "git": "^0.1.5",
     "mocha": "^6.2.2",
+    "mongodb": "^3.3.3",
     "mongoose": "^5.7.7"
   },
   "devDependencies": {},
